--- a/setup.cfg
+++ b/setup.cfg
@@ -103,7 +103,7 @@ testpaths = "sunpy" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "sunpy[/\]_dev" ".jupyter" ".history" "tools" "sunpy[\/]extern"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
+addopts = -m "not mpl_image_compare" --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
 asdf_schema_tests_enabled = true
 asdf_schema_root = sunpy/io/special/asdf/schemas/
 mpl-results-path = figure_test_images
@@ -111,10 +111,9 @@ mpl-use-full-test-name = True
 markers =
     remote_data: marks this test function as needing remote data.
     online: marks this test function as needing online connectivity.
-    figure: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
+    mpl_image_compare: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
     flaky
     array_compare
-    mpl_image_compare
 remote_data_strict = True
 # Pin junit behaviour; we might want to update this to xunit2 at some point
 junit_family=xunit1
@@ -178,10 +177,10 @@ filterwarnings =
     ignore:'datfix' made the change:astropy.wcs.wcs.FITSFixedWarning
 
 [pycodestyle]
-max_line_length = 100
+max_line_length = 110
 
 [flake8]
-max-line-length = 100
+max-line-length = 110
 exclude =
     .git,
     __pycache__,
