--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{37,38,39}{,-oldestdeps,-devdeps,-online,-figure}
+    py{37,38,39}{,-oldestdeps,-devdeps,-online,-figure,-hypothesis,-base_deps,-conda}
     build_docs
     codestyle
 requires =
@@ -127,10 +127,19 @@ commands =
     pre-commit install-hooks
     pre-commit run --color always --all-files --show-diff-on-failure
 
+[testenv:base_deps]
+description = Check the test suite does not fail if there are not extra dependencies
+extras =
+deps =
+  astropy>=4.0.3
+  numpy>=1.16.0
+  parfive[ftp]>=1.1.0
+commands =
+    python -c "import sunpy; sunpy.self_test()"
+
 # This env requires tox-conda.
-[testenv:py38-conda]
+[testenv:conda]
 pypi_filter =
-basepython = python3.8
 extras =
 deps =
 conda_deps =
