--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,6 @@ name: $(BuildDefinitionName)_$(Date:yyyyMMdd)$(Rev:.rr)
 variables:
   CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
   CIBW_MANYLINUX_I686_IMAGE: manylinux2014
-  CIBW_BEFORE_BUILD: pip install numpy
 
 schedules:
   - cron: "0 0 * * *"
@@ -71,20 +70,8 @@ jobs:
       - linux: py38-online
         name: py38_test_online
 
-      - linux32: py38-32bit
-        manylinux_image: manylinux2014_i686
-        name: py38_test_32bit
-
-      - linux: py38-hypothesis
-
-      - linux: py38-conda
-        name: py38_conda
-        libraries: {}
-
       - linux: py37-oldestdeps
         name: py37_test_oldestdeps
-
-      - linux: py38-devdeps
 
       - linux: build_docs
         posargs: " "
@@ -94,8 +81,23 @@ jobs:
         name: python_codestyle
         pytest: false
 
+      # Run these only on cron or manually or non-master branches.
+      - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'master'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
+
+        - linux32: py38-32bit
+          manylinux_image: manylinux2014_i686
+          name: py38_test_32bit
+
+        - linux: py38-hypothesis
+
+        - linux: py38-conda
+          name: py38_conda
+          libraries: {}
+
+        - linux: py38-devdeps
+
 # On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
-- ${{ if or(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'master'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
+- ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'master'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
   - template: publish.yml@OpenAstronomy
     parameters:
       # Only Upload to PyPI on tags
@@ -105,14 +107,14 @@ jobs:
       test_command: 'pytest -p no:warnings --doctest-rst -m "not figure" --pyargs sunpy'
       submodules: false
       targets:
-        - wheels_cp3[789]-manylinux*
-        - wheels_cp3[789]-macosx*
+        - wheels_cp3[78]-manylinux*x86_64
+        - wheels_cp3[78]-macosx*
         - sdist
       dependsOn:
         - py37_test
         - py38_test
         - py39_test
         - py38_test_online
-        - py38_test_32bit
         - py37_test_oldestdeps
+        - py38_test_32bit
         - py38_conda
