--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -118,3 +118,21 @@ jobs:
         - py37_test_oldestdeps
         - py38_test_32bit
         - py38_conda
+
+- ${{ if or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual')) }}:
+  - job: notify
+    condition: failed()
+    pool:
+      vmImage: ubuntu-20.04
+    steps:
+    - bash: |
+        sudo apt-get install httpie xonsh
+        http --version
+    - bash: xonsh ./tools/send_matrix_message.xsh
+      env:
+        ROOMID: '%21MeRdFpEonLoCwhoHeT:matrix.org'  # main sunpy room
+        HOMESERVER: 'https://matrix.cadair.com'
+        BRANCH: $(Build.SourceBranchName)
+        ACCESS_TOKEN: $(azurebot_access_token)
+        BUILDID: $(Build.BuildId)
+        STATUS: $(Agent.JobStatus)
