created more extra deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,27 +33,44 @@ include_package_data = True
 setup_requires =
   setuptools_scm
 install_requires =
-  numpy>=1.16.0
-  scipy>=1.2.0
-  matplotlib>=2.2.2
-  pandas>=0.23.0
   astropy>=4.0.3
+  numpy>=1.16.0
   parfive[ftp]>=1.1.0
-  h5netcdf>=0.8.1
 
 [options.extras_require]
-database = sqlalchemy
+asdf =
+  asdf
+dask =
+  dask[array]
+database =
+  sqlalchemy
+instr =
+  matplotlib>=2.2.2
+  pandas>=0.23.0
+  scipy>=1.2.0
 image =
   scikit-image
-jpeg2000 = glymur!=0.9.0
+  scipy>=1.2.0
+jpeg2000 =
+  glymur!=0.9.0
+map =
+  matplotlib>=2.2.2
+  scipyi>=1.2.0
 net =
   beautifulsoup4
   drms
+  pandas>=0.23.0
   python-dateutil
-  zeep
   tqdm
-asdf = asdf
-dask = dask[array]
+  zeep
+time =
+  pandas>=0.23.0
+timeseries =
+  h5netcdf>=0.8.1
+  matplotlib>=2.2.2
+  pandas>=0.23.0
+visualization =
+  matplotlib>=2.2.2
 tests =
   pytest-astropy >= 0.8  # 0.8 is the first release to include filter-subpackage
   pytest-doctestplus >= 0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
@@ -61,15 +78,15 @@ tests =
   pytest-mpl >= 0.12
   tox
 docs =
-  sphinx>=2
-  sphinx-automodapi
-  sphinx-gallery>=0.7.0 # First to include the mini-galleries directive
-  sunpy-sphinx-theme
-  ruamel.yaml
-  towncrier
-  reproject
   astroquery
   jplephem
+  reproject
+  ruamel.yaml
+  sphinx-automodapi
+  sphinx-gallery>=0.7.0 # First to include the mini-galleries directive
+  sphinx>=2
+  sunpy-sphinx-theme
+  towncrier
 
 [options.packages.find]
 exclude = sunpy._dev
