--- a/setup.cfg
+++ b/setup.cfg
@@ -83,7 +83,7 @@ testpaths = "sunpy" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "sunpy[/\]_dev" ".jupyter" ".history" "tools" "sunpy[\/]extern"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = --doctest-rst -m "not figure" --doctest-ignore-import-errors
+addopts = --doctest-rst -m "not figure"
 asdf_schema_tests_enabled = true
 asdf_schema_root = sunpy/io/special/asdf/schemas/
 mpl-results-path = figure_test_images
@@ -134,6 +134,11 @@ filterwarnings =
     ignore:Distutils was imported before Setuptools
     # Figure tests use agg backend so show doesn't work but we use it in peek
     ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.
+    # Ignore doctest issues: docs/guide/tour.rst
+    ignore:File may have been truncated*
+    # Some tests use data that have dates in the future and ERFA does not like.
+    ignore:ERFA function "d2dtf"*
+    ignore:ERFA function "dtf2d"*
     # Currently helio makes unverified requests - this filter should be removed when
     # https://github.com/sunpy/sunpy/issues/4401 is fixed
     ignore:Unverified HTTPS request
