--- a/tox.ini
+++ b/tox.ini
@@ -8,14 +8,14 @@ isolated_build = true
 
 [testenv]
 pypi_filter = file://.test_package_pins.txt
-# We use bash in some of our enviroments so we have to whitelist it.
+# We use bash in some of our environments so we have to whitelist it.
 whitelist_externals=
     /bin/bash
     /usr/bin/bash
 # Run the tests in a temporary directory to make sure that we don't import
 # sunpy from the source tree
 changedir = .tmp/{envname}
-# tox environments are constructued with so-called 'factors' (or terms)
+# tox environments are constructed with so-called 'factors' (or terms)
 # separated by hyphens, e.g. test-devdeps-cov. Lines below starting with factor:
 # will only take effect if that factor is included in the environment name. To
 # see a list of example environments that can be run, along with a description,
@@ -27,7 +27,7 @@ description =
     run tests
     devdeps: with the latest developer version of key dependencies
     oldestdeps: with the oldest supported version of key dependencies
-    online: that require remote data
+    online: that require remote data (as well as the offline ones)
     hypothesis: using hypothesis (both offline and online)
     figure: runs the figure test suite.
 setenv =
@@ -80,7 +80,8 @@ extras =
     dev
 commands =
     !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --reruns 2 --timeout=180 --remote-data=any -m "remote_data" {posargs}
+    # We run all of the tests for the online build otherwise pytest does not collect any doctests
+    online: {env:PYTEST_COMMAND} --reruns=2 --timeout=60 --remote-data=any {posargs}
     devdeps-!figure: bash -ec "for f in {toxinidir}/examples/*/*.py; do [[ $f == *skip* ]] && continue; echo "$f" && python "$f"; done"
     hypothesis: {env:PYTEST_COMMAND} --hypothesis-show-statistics --remote-data=any -m "hypothesis" {posargs}
     figure: /bin/bash -c "mkdir -p ./figure_test_images; python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)' > ./figure_test_images/figure_version_info.txt"
