[skip ci] updated docs again

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ install_requires =
   parfive[ftp]>=1.1.0
 
 [options.extras_require]
+# The list of available extras is also in the installation docs, if you add or remove one please edit it there as well.
 asdf =
   asdf
 dask =
