--- a/tox.ini
+++ b/tox.ini
@@ -125,7 +125,7 @@ conda_deps =
     hypothesis
     h5netcdf
     jinja2
-    libopenblas
+    libopenblas=0.3.10
     lxml
     matplotlib
     numpy
