Pin to 0.3.12 as minimum

--- a/tox.ini
+++ b/tox.ini
@@ -125,7 +125,7 @@ conda_deps =
     hypothesis
     h5netcdf
     jinja2
-    libopenblas=0.3.10=openmp_*_5
+    libopenblas>=0.3.12
     lxml
     matplotlib
     numpy
