Pin libopenblas to at least 0.3.12 to resolve macOS bug

--- a/tox.ini
+++ b/tox.ini
@@ -125,7 +125,7 @@ conda_deps =
     glymur
     hypothesis
     jinja2
-    libopenblas
+    libopenblas>=0.3.12
     lxml
     matplotlib
     numpy
