--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,8 @@
 [tox]
 envlist =
-    py{37,38,39}{,-oldestdeps,-devdeps,-online,-hypothesis,-figure}
+    py{37,38,39}{,-oldestdeps,-devdeps,-online,-figure}
     build_docs
     codestyle
-    hypothesis
 isolated_build = true
 
 [testenv]
@@ -80,8 +79,7 @@ extras =
     dev
 commands =
     !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --hypothesis-show-statistics --reruns 3 --timeout=30 --remote-data=any {posargs}
-    devdeps-!figure: bash -ec "for f in {toxinidir}/examples/*/*.py; do [[ $f == *skip* ]] && continue; echo "$f" && python "$f"; done"
+    online: {env:PYTEST_COMMAND} --hypothesis-show-statistics --reruns 2 --reruns-delay 15 --timeout=180 --remote-data=any {posargs}
     hypothesis: {env:PYTEST_COMMAND} --hypothesis-show-statistics --remote-data=any -m "hypothesis" {posargs}
     figure: /bin/bash -c "mkdir -p ./figure_test_images; python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)' > ./figure_test_images/figure_version_info.txt"
     figure: /bin/bash -c "pip freeze >> ./figure_test_images/figure_version_info.txt"
@@ -105,7 +103,7 @@ deps =
     pre-commit
 commands =
     pre-commit install-hooks
-    pre-commit run --verbose --all-files --show-diff-on-failure
+    pre-commit run --color always --all-files --show-diff-on-failure
 
 # This env requires tox-conda.
 [testenv:py38-conda]
