--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,103 +37,151 @@ trigger:
 pr:
   autoCancel: true
 
-jobs:
-- template: run-tox-env.yml@OpenAstronomy
-  parameters:
-    default_python: '3.8'
-    submodules: false
-    coverage: codecov
-    toxdeps: tox-pypi-filter
-    posargs: -n=4
-    libraries:
-      apt:
-        - libopenjp2-7
-        - graphviz
-      brew:
-        - openjpeg
-      yum:
-        - openssl-devel
-        - freetype-devel
-        - libpng-devel
-        - hdf5-devel
+stages:
+  - stage: FirstPhaseTests
+    displayName: Core Tests
+    jobs:
+    - template: run-tox-env.yml@OpenAstronomy
+      parameters:
+        default_python: '3.8'
+        submodules: false
+        coverage: codecov
+        toxdeps: tox-pypi-filter
+        posargs: -n=4
 
-    envs:
-      - linux: py39
-        name: py39_test
+        libraries:
+          apt:
+            - libopenjp2-7
+            - graphviz
+          brew:
+            - openjpeg
 
-      - macos: py38
-        name: py38_test
-        posargs: -n=1
+        envs:
+          - linux: codestyle
+            name: python_codestyle
+            pytest: false
 
-      - windows: py37
-        name: py37_test
+          - linux: py39
+            name: py39_test
 
-      - linux: py38-online
-        name: py38_test_online
+  - stage: SecondPhaseTests
+    displayName: Stage 2 Tests
+    dependsOn: FirstPhaseTests
+    jobs:
+    - template: run-tox-env.yml@OpenAstronomy
+      parameters:
+        default_python: '3.8'
+        submodules: false
+        coverage: codecov
+        toxdeps: tox-pypi-filter
+        posargs: -n=4
 
-      - linux: py37-oldestdeps
-        name: py37_test_oldestdeps
+        libraries:
+          apt:
+            - libopenjp2-7
+            - graphviz
+          brew:
+            - openjpeg
+          yum:
+            - openssl-devel
+            - freetype-devel
+            - libpng-devel
+            - hdf5-devel
 
-      - linux: build_docs
-        posargs: " "
-        pytest: false
+        envs:
+          - macos: py38
+            name: py38_test
+            posargs: -n=1
 
-      - linux: codestyle
-        name: python_codestyle
-        pytest: false
+          - windows: py37
+            name: py37_test
 
-      # Run these only on cron or manually or non-master branches.
-      - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'master'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
+          - linux: build_docs
+            posargs: " "
+            pytest: false
 
-        - linux32: py38-32bit
-          manylinux_image: manylinux2014_i686
-          name: py38_test_32bit
+          - linux: py38-online
+            name: py38_test_online
 
-        - linux: py38-hypothesis
+          - linux: py37-oldestdeps
+            name: py37_test_oldestdeps
 
-        - linux: py38-conda
-          name: py38_conda
-          libraries: {}
+          - linux: py38-conda
+            name: py38_conda
+            libraries: {}
 
-        - linux: py38-devdeps
 
-# On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
-- ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'master'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
-  - template: publish.yml@OpenAstronomy
-    parameters:
-      # Only Upload to PyPI on tags
-      ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
-        pypi_connection_name : 'PyPI'
-      test_extras: 'dev'
-      test_command: 'pytest -p no:warnings --doctest-rst -m "not figure" --pyargs sunpy'
-      submodules: false
-      targets:
-        - wheels_cp3[78]-manylinux*x86_64
-        - wheels_cp3[78]-macosx*
-        - sdist
+  - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'master'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
+    - stage: CronTests
+      displayName: Cron Tests
+      jobs:
+      - template: run-tox-env.yml@OpenAstronomy
+        parameters:
+          default_python: '3.8'
+          submodules: false
+          coverage: codecov
+          toxdeps: tox-pypi-filter
+          posargs: -n=4
+
+          libraries:
+            apt:
+              - libopenjp2-7
+              - graphviz
+            brew:
+              - openjpeg
+            yum:
+              - openssl-devel
+              - freetype-devel
+              - libpng-devel
+              - hdf5-devel
+
+          envs:
+            - linux32: py38-32bit
+              manylinux_image: manylinux2014_i686
+              name: py38_test_32bit
+
+            - linux: py38-hypothesis
+
+            - linux: py38-devdeps
+
+  # On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
+  - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'master'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
+    - stage: Release
+      dependsOn: SecondPhaseTests
+      jobs:
+      - template: publish.yml@OpenAstronomy
+        parameters:
+          # Only Upload to PyPI on tags
+          ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
+            pypi_connection_name : 'PyPI'
+          test_extras: 'dev'
+          test_command: 'pytest -p no:warnings --doctest-rst -m "not figure" --pyargs sunpy'
+          submodules: false
+          targets:
+            - wheels_cp3[78]-manylinux*x86_64
+            - wheels_cp3[78]-macosx*
+            - sdist
+
+  - ${{ if or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual')) }}:
+    - stage: CronNotifier
+      condition: failed()
       dependsOn:
-        - py37_test
-        - py38_test
-        - py39_test
-        - py38_test_online
-        - py37_test_oldestdeps
-        - py38_test_32bit
-        - py38_conda
-
-- ${{ if or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual')) }}:
-  - job: notify
-    condition: failed()
-    pool:
-      vmImage: ubuntu-20.04
-    steps:
-    - bash: |
-        sudo apt-get install httpie xonsh
-        http --version
-    - bash: xonsh ./tools/send_matrix_message.xsh
-      env:
-        ROOMID: '%21MeRdFpEonLoCwhoHeT:matrix.org'  # main sunpy room
-        HOMESERVER: 'https://matrix.cadair.com'
-        BRANCH: $(Build.SourceBranchName)
-        ACCESS_TOKEN: $(azurebot_access_token)
-        BUILDID: $(Build.BuildId)
-        STATUS: $(Agent.JobStatus)
+        - SecondPhaseTests
+        - CronTests
+        - Release
+      jobs:
+      - job: notify
+        pool:
+          vmImage: ubuntu-20.04
+        steps:
+        - bash: |
+            sudo apt-get install httpie xonsh
+            http --version
+        - bash: xonsh ./tools/send_matrix_message.xsh
+          env:
+            ROOMID: '%21MeRdFpEonLoCwhoHeT:matrix.org'  # main sunpy room
+            HOMESERVER: 'https://matrix.cadair.com'
+            BRANCH: $(Build.SourceBranchName)
+            ACCESS_TOKEN: $(azurebot_access_token)
+            BUILDID: $(Build.BuildId)
+            STATUS: Failed
