--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ jobs:
     submodules: false
     coverage: codecov
     toxdeps: tox-pypi-filter
-    posargs: -n=6
+    posargs: -n=4
     libraries:
       apt:
         - libopenjp2-7
@@ -63,6 +63,7 @@ jobs:
 
       - macos: py38
         name: py38_test
+        posargs: -n=1
 
       - windows: py37
         name: py37_test
@@ -87,6 +88,8 @@ jobs:
         - linux32: py38-32bit
           manylinux_image: manylinux2014_i686
           name: py38_test_32bit
+
+        - linux: py38-hypothesis
 
         - linux: py38-conda
           name: py38_conda
