Don't wait for other tests to pass before running Cron tests

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -114,6 +114,7 @@ stages:
   - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'master'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
     - stage: CronTests
       displayName: Cron Tests
+      dependsOn: []  # Don't wait on other stages
       jobs:
       - template: run-tox-env.yml@OpenAstronomy
         parameters:
