Convert ResourceWarnings into errors during tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -117,6 +117,7 @@ junit_family=xunit1
 filterwarnings =
     error
     error::sunpy.util.exceptions.SunpyDeprecationWarning
+    error::ResourceWarning
     # Do not fail on pytest config issues (i.e. missing plugins) but do show them
     always::pytest.PytestConfigWarning
     #
