--- a/tox.ini
+++ b/tox.ini
@@ -76,9 +76,11 @@ deps =
     figure-!devdeps: matplotlib==3.3.2
 
 # The following indicates which extras_require from setup.cfg will be installed
-# dev is special in that it installs everything
+# We use test and all so we don't install docs when we don't need it (as
+# opposed to dev).
 extras =
-    dev
+    all
+    test
 commands =
     !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
     online: {env:PYTEST_COMMAND} --hypothesis-show-statistics --reruns 2 --reruns-delay 15 --timeout=180 --remote-data=any {posargs}
@@ -92,7 +94,11 @@ commands =
 [testenv:build_docs]
 changedir = docs
 description = Invoke sphinx-build to build the HTML docs
-extras = dev
+# Be verbose about the extras rather than using dev for clarity
+extras =
+  all
+  test
+  docs
 commands =
     sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
     python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "index.html"))'
