Apply suggestions from code review

--- a/tox.ini
+++ b/tox.ini
@@ -80,7 +80,7 @@ deps =
 # opposed to dev).
 extras =
     all
-    test
+    tests
 commands =
     !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
     online: {env:PYTEST_COMMAND} --hypothesis-show-statistics --reruns 2 --reruns-delay 15 --timeout=180 --remote-data=any {posargs}
@@ -97,7 +97,6 @@ description = Invoke sphinx-build to build the HTML docs
 # Be verbose about the extras rather than using dev for clarity
 extras =
   all
-  test
   docs
 commands =
     sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
