--- a/setup.cfg
+++ b/setup.cfg
@@ -101,7 +101,7 @@ testpaths = "sunpy" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "sunpy[/\]_dev" ".jupyter" ".history" "tools" "sunpy[\/]extern"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = --doctest-rst -m "not figure" --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
+addopts = --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
 asdf_schema_tests_enabled = true
 asdf_schema_root = sunpy/io/special/asdf/schemas/
 mpl-results-path = figure_test_images
