--- a/setup.cfg
+++ b/setup.cfg
@@ -127,6 +127,9 @@ filterwarnings =
     # is being ignored
     #
     #
+    # See https://github.com/pandas-dev/pandas/issues/26367; this can be
+    # removed when our minimum pandas version is >=0.25
+    ignore:can't resolve package from __spec__ or __package__:ImportWarning
     # See https://github.com/spacetelescope/asdf/issues/789
     ignore:direct construction of AsdfSchemaFile has been deprecated
     ignore:direct construction of AsdfSchemaItem has been deprecated
