--- a/setup.cfg
+++ b/setup.cfg
@@ -163,6 +163,8 @@ filterwarnings =
     # Currently helio makes unverified requests - this filter should be removed when
     # https://github.com/sunpy/sunpy/issues/4401 is fixed
     ignore:Unverified HTTPS request
+    # Seems there is a 3.9 deprecation warning inside ipykernel
+    ignore::DeprecationWarning:ipykernel
 
 [pycodestyle]
 max_line_length = 100
