--- a/tox.ini
+++ b/tox.ini
@@ -93,7 +93,7 @@ commands =
     figure: /bin/bash -c "pip freeze >> ./figure_test_images/figure_version_info.txt"
     figure: /bin/bash -c "cat ./figure_test_images/figure_version_info.txt"
     figure: python -c "import sunpy.tests.helpers as h; print(h.get_hash_library_name())"
-    figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any {posargs}
+    figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/sunpy-master/figures/{envname}/ {posargs}
 
 [testenv:build_docs]
 changedir = docs
