omfg bad rebase

--- a/setup.cfg
+++ b/setup.cfg
@@ -165,6 +165,8 @@ filterwarnings =
     ignore:Unverified HTTPS request
     # Seems there is a 3.9 deprecation warning inside ipykernel
     ignore::DeprecationWarning:ipykernel
+    # https://github.com/astropy/astropy/issues/11272
+    ignore:elementwise == comparison failed and returning scalar instead:FutureWarning:astropy.table
 
 [pycodestyle]
 max_line_length = 100
