--- a/setup.cfg
+++ b/setup.cfg
@@ -163,10 +163,10 @@ filterwarnings =
     # Currently helio makes unverified requests - this filter should be removed when
     # https://github.com/sunpy/sunpy/issues/4401 is fixed
     ignore:Unverified HTTPS request
-    # Seems there is a 3.9 deprecation warning inside ipykernel
-    ignore::DeprecationWarning:ipykernel
     # https://github.com/astropy/astropy/issues/11272
     ignore:elementwise == comparison failed and returning scalar instead:FutureWarning:astropy.table
+    # https://github.com/sunpy/sunpy/issues/4897
+    ignore:Calling gca() with keyword arguments was deprecated
 
 [pycodestyle]
 max_line_length = 100
