--- a/setup.cfg
+++ b/setup.cfg
@@ -165,6 +165,10 @@ filterwarnings =
     ignore:Unverified HTTPS request
     # https://github.com/astropy/astropy/issues/11272
     ignore:elementwise == comparison failed and returning scalar instead:FutureWarning:astropy.table
+    # This isn't really an issue it's an annoyance, it's triggered by printing
+    # an astropy table inside a test, which is generally only done when
+    # debugging.
+    ignore:the imp module is deprecated in favour of importlib:DeprecationWarning:ipykernel.iostream
 
 [pycodestyle]
 max_line_length = 100
