Update numpy warning filtering

--- a/setup.cfg
+++ b/setup.cfg
@@ -136,9 +136,11 @@ filterwarnings =
     ignore:direct construction of AsdfSchemaExampleItem has been deprecated
     # See https://github.com/Cadair/parfive/issues/41
     ignore:The loop argument is deprecated
-    # These warnings are raised on travis due to something odd about numpy installation,
-    # but don't impact the tests
+    # This is due to dependencies building with a numpy version different from
+    # the local installed numpy version, but should be fine
+    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
     ignore:numpy.ufunc size changed:RuntimeWarning
+    ignore:numpy.ndarray size changed:RuntimeWarning
     # See https://github.com/mvantellingen/python-zeep/issues/956
     ignore:defusedxml.lxml is no longer supported:DeprecationWarning
     # See https://github.com/aio-libs/aiohttp/issues/4842
