--- a/.github/workflows/asv-regular.yml
+++ b/.github/workflows/asv-regular.yml
@@ -1,10 +1,8 @@
 name: asv-benchmarks-daily
 
 on:
-  push:
-    branches: asv-ci-regular
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 3 * * *'
 
 jobs:   
   asv-run:
@@ -14,12 +12,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
-          
-      - name: List branches
-        run : git branch -a
-      
-      - name: List current folder
-        run : ls -la
 
       - name: Checkout sunpy-benchmarks repo
         uses: actions/checkout@v2
