--- a/.github/workflows/asv-regular.yml
+++ b/.github/workflows/asv-regular.yml
@@ -35,7 +35,7 @@ jobs:
         run : asv machine --machine GH-Actions --os ubuntu-20.04 --arch x64 --cpu "2-core unknown" --ram 7GB
 
       - name: Run benchmarks for commits since v2.1
-        run : taskset -c 0 asv run --skip-existing-successful 2.1..
+        run : taskset -c 0 asv run --skip-existing-successful v2.1.dev..
 
       - name: Install SSH Client 🔑
         uses: webfactory/ssh-agent@v0.4.1
