--- a/.github/workflows/stale_bot.yml
+++ b/.github/workflows/stale_bot.yml
@@ -24,13 +24,17 @@ jobs:
         stale-pr-message: >-
           Hello :wave:,
           Thanks for your contribution to sunpy!
-          
+
           I have marked this pull request as stale because there hasn't had any activity in five months.
           If you are still working on this, or if it's waiting on a maintainer to look at it then please let us know and we will keep it open.
-          
-          If nobody comments on this pull request for another month I will close it.
+          Please add a comment with: @sunpy/sunpy-developers to get someone's attention.
+
+          If nobody comments on this pull request for another month, it will be closed.
         close-pr-message: >-
-          Hello :wave:,
+          Hello again :wave:,
+          Wew want to thank you again for your contribution to sunpy!
+
           This pull request has had no activity since my last reminder, so I am going to close it.
           If at any time you want to come back to this please feel free to reopen it!
+          If you want to discuss this, please add a comment with: @sunpy/sunpy-developers and someone will get back to you soon.
         exempt-pr-labels:  'Keep Open'
