EXP: Test out a patch to sphinx-gallery

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -14,6 +14,7 @@ sphinx:
 
 python:
    install:
+      - requirements: docs/.rtd_requirements.txt
       - method: pip
         extra_requirements:
            - dev
