--- a/tox.ini
+++ b/tox.ini
@@ -79,6 +79,8 @@ deps =
     figure-!devdeps: astropy==4.0.3
     figure-!devdeps: matplotlib==3.3.2
 
+    build_docs: git+https://github.com/Cadair/sphinx-gallery@skip_on_fail#egg=sphinx-gallery
+
 # The following indicates which extras_require from setup.cfg will be installed
 # We use test and all so we don't install docs when we don't need it (as
 # opposed to dev).
