--- a/tox.ini
+++ b/tox.ini
@@ -32,9 +32,10 @@ description =
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
+    SUNPY_SAMPLEDIR = {env:SUNPY_SAMPLEDIR:{toxinidir}/.tox/{envname}/sample_data/}
     PYTEST_COMMAND = pytest -vvv -s -raR --pyargs sunpy --cov-report=xml --cov=sunpy --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
     devdeps,build_docs,online: HOME = {envtmpdir}
-    SUNPY_SAMPLEDIR = {env:SUNPY_SAMPLEDIR:{toxinidir}/.tox/{envname}/sample_data/}
+    build_docs: HIDE_PARFIVE_PROGESS = True
 passenv =
     HTTP_PROXY
     HTTPS_PROXY
