--- a/rtd-environment.yml
+++ b/rtd-environment.yml
@@ -5,3 +5,5 @@ dependencies:
   - openjpeg
   - pip
   - python=3.9
+  - pip:
+      - git+https://github.com/Cadair/sphinx-gallery@skip_on_fail#egg=sphinx-gallery
