Sanity preserving comment

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -14,6 +14,8 @@ sphinx:
 
 python:
    install:
+     # Any extra pip dependencies not installed via extras should be specified
+     # in the conda environment file.
      - method: pip
        extra_requirements:
           - dev
