Assorted Doc Build Fixes (#4993)
* Transition SRS example to use sample data

* Fix broken references in the changelog

* Do not accept gzip encoded sample data downloads as github pages doesn't like it

* EXP: Test out a patch to sphinx-gallery

* Fix header injection logic and re-show progress for sample data

* Disable progress bar on docs build

* wtaf rtd

* Sanity preserving comment

--- a/rtd-environment.yml
+++ b/rtd-environment.yml
@@ -4,4 +4,6 @@ channels:
 dependencies:
   - openjpeg
   - pip
-  - python=3.8
+  - python=3.9
+  - pip:
+      - git+https://github.com/Cadair/sphinx-gallery@skip_on_fail#egg=sphinx-gallery
