--- a/tox.ini
+++ b/tox.ini
@@ -33,9 +33,10 @@ description =
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
-    PYTEST_COMMAND = pytest -vvv -s -ra --pyargs sunpy --cov-report= --cov=sunpy --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
-    devdeps,build_docs,online: HOME = {envtmpdir}
     SUNPY_SAMPLEDIR = {env:SUNPY_SAMPLEDIR:{toxinidir}/.tox/{envname}/sample_data/}
+    PYTEST_COMMAND = pytest -vvv -s -raR --pyargs sunpy --cov-report=xml --cov=sunpy --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
+    devdeps,build_docs,online: HOME = {envtmpdir}
+    build_docs: HIDE_PARFIVE_PROGESS = True
 passenv =
     HTTP_PROXY
     HTTPS_PROXY
@@ -76,6 +77,8 @@ deps =
     # Figure tests need a tightly controlled environment
     figure-!devdeps: astropy==4.0.1.post1
     figure-!devdeps: matplotlib==3.3.2
+
+    build_docs: git+https://github.com/Cadair/sphinx-gallery@skip_on_fail#egg=sphinx-gallery
 
 # The following indicates which extras_require from setup.cfg will be installed
 # dev is special in that it installs everything
