CI: typo fix and tmp on push start

--- a/.github/workflows/asv-regular.yml
+++ b/.github/workflows/asv-regular.yml
@@ -1,6 +1,8 @@
 name: asv-benchmarks-daily
 
 on:
+  push:
+    branches: asv-ci-regular
   schedule:
     - cron: '0 3 * * *'
 
@@ -35,7 +37,7 @@ jobs:
         run : asv machine --machine GH-Actions --os ubuntu-20.04 --arch x64 --cpu "2-core unknown" --ram 7GB
 
       - name: Run benchmarks for commits since v2.1
-        run : taskset -c 0 asv run --skip-existing-successful v2.1.dev..
+        run : taskset -c 0 asv run --skip-existing-successful v2.1dev..
 
       - name: Install SSH Client 🔑
         uses: webfactory/ssh-agent@v0.4.1
