Always run cron notify

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -146,6 +146,7 @@ stages:
 
   - ${{ if or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual')) }}:
     - stage: CronNotifier
+      condition: succeededOrFailed()
       dependsOn:
         - SecondPhaseTests
         - CronTests
