--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,8 @@
 name: $(BuildDefinitionName)_$(Date:yyyyMMdd)$(Rev:.rr)
+variables:
+  CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+  CIBW_MANYLINUX_I686_IMAGE: manylinux2014
+  JSOC_EMAIL: "jsoc@cadair.com"  # For the example gallery on the dev deps build
 
 schedules:
   - cron: "0 0 * * *"
@@ -31,76 +35,135 @@ trigger:
     - '*pre*'
     - '*post*'
 
-jobs:
-- template: run-tox-env.yml@OpenAstronomy
-  parameters:
-    default_python: '3.8'
-    submodules: false
-    coverage: codecov
-    toxdeps: tox-pypi-filter
-    posargs: -n=4
-    libraries:
-      apt:
-        - libopenjp2-7
-        - graphviz
-      brew:
-        - openjpeg
-      yum:
-        - openssl-devel
-        - freetype-devel
-        - libpng-devel
-        - libffi-devel
-        - python-devel
+pr:
+  autoCancel: true
 
-    envs:
-      - macos: py38
-        name: py38_test
+stages:
+  - stage: FirstPhaseTests
+    displayName: Core Tests
+    jobs:
+    - template: run-tox-env.yml@OpenAstronomy
+      parameters:
+        default_python: '3.8'
+        submodules: false
+        coverage: codecov
+        toxdeps: tox-pypi-filter
+        posargs: -n=4
 
-      - windows: py37
-        name: py37_test
+        libraries:
+          apt:
+            - libopenjp2-7
 
-      - linux: py39-online
-        name: py39_test_online
+        envs:
+          - linux: codestyle
+            name: style_check
+            pytest: false
+            libraries: {}
 
-      - linux32: py38-32bit
-        name: py38_test_32bit
+          - linux: py39
 
-      - linux: codestyle
-        name: python_codestyle
-        pytest: false
+  - stage: SecondPhaseTests
+    displayName: Stage 2 Tests
+    dependsOn: FirstPhaseTests
+    jobs:
+    - template: run-tox-env.yml@OpenAstronomy
+      parameters:
+        default_python: '3.8'
+        submodules: false
+        coverage: codecov
+        toxdeps: tox-pypi-filter
+        posargs: -n=4
 
-      - linux: py36-conda
-        name: py36_conda
-        libraries: {}
+        libraries:
+          apt:
+            - libopenjp2-7
+            - graphviz
+          brew:
+            - openjpeg
 
-      - linux: py36-oldestdeps
-        name: py36_test_oldestdeps
+        envs:
+          - macos: py37
 
-      - linux: py38-devdeps
+          - windows: py38
 
-      - linux: build_docs
-        posargs: " "
-        pytest: false
+          - linux: build_docs
+            posargs: " "
+            pytest: false
 
-# On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
-- ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), not(contains(variables['Build.SourceBranch'], 'master'))) }}:
-  - template: publish.yml@OpenAstronomy
-    parameters:
-      # Only Upload to PyPI on tags
-      ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
-        pypi_connection_name : 'PyPI'
-      test_extras: 'dev'
-      test_command: 'pytest -p no:warnings --doctest-rst -m "not figure" --pyargs sunpy'
-      submodules: false
+          - linux: py38-online
 
-      targets:
-        - wheels_cp3[6789]-manylinux*x86_64
-        - wheels_cp3[6789]-macosx*
-        - sdist
+          - linux: py36-oldestdeps
+
+          - linux: py36-conda
+            libraries: {}
+
+
+  - ${{ if or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual')) }}:
+    - stage: CronTests
+      displayName: Cron Tests
+      dependsOn: []  # Don't wait on other stages
+      jobs:
+      - template: run-tox-env.yml@OpenAstronomy
+        parameters:
+          default_python: '3.8'
+          submodules: false
+          coverage: codecov
+          toxdeps: tox-pypi-filter
+          posargs: -n=4
+
+          libraries:
+            apt:
+              - libopenjp2-7
+              - graphviz
+            yum:
+              - openssl-devel
+              - freetype-devel
+              - libpng-devel
+              - hdf5-devel
+
+          envs:
+            - linux: py38-hypothesis
+
+            - linux: py38-devdeps
+
+  # On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
+  - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'master'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
+    - stage: Release
+      dependsOn: SecondPhaseTests
+      jobs:
+      - template: publish.yml@OpenAstronomy
+        parameters:
+          # Only Upload to PyPI on tags
+          ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
+            pypi_connection_name : 'PyPI'
+          test_extras: 'dev'
+          test_command: 'pytest -p no:warnings --doctest-rst -m "not figure" --pyargs sunpy'
+          submodules: false
+          targets:
+            - wheels_cp3[6789]-manylinux*x86_64
+            - wheels_cp3[6789]-macosx*
+            - sdist
+
+  - ${{ if or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual')) }}:
+    - stage: CronNotifier
+      condition: succeededOrFailed()
       dependsOn:
-        - py36_conda
-        - py36_test_oldestdeps
-        - py37_test
-        - py38_test
-        - py38_test_32bit
-        - py39_test_online
+        - SecondPhaseTests
+        - CronTests
+        - Release
+      jobs:
+      - job: notify
+        pool:
+          vmImage: ubuntu-20.04
+        steps:
+        - bash: |
+            sudo apt-get install httpie xonsh
+            http --version
+        - bash: xonsh ./tools/send_matrix_message.xsh
+          env:
+            ROOMID: '%21JYqfIVJjWANcHnfktY:cadair.com'  # sunpy development room
+            HOMESERVER: 'https://matrix.cadair.com'
+            BRANCH: $(Build.SourceBranchName)
+            ACCESS_TOKEN: $(azurebot_access_token)
+            BUILDID: $(Build.BuildId)
+            STATUS: $(Agent.JobStatus)
