--- a/rtd-environment.yml
+++ b/rtd-environment.yml
@@ -4,4 +4,6 @@ channels:
 dependencies:
   - openjpeg
   - pip
-  - python=3.8
+  - python=3.9
+  - pip:
+      - git+https://github.com/sphinx-gallery/sphinx-gallery.git
