--- a/setup.cfg
+++ b/setup.cfg
@@ -171,6 +171,8 @@ filterwarnings =
     # an astropy table inside a test, which is generally only done when
     # debugging.
     ignore:the imp module is deprecated in favour of importlib:DeprecationWarning:ipykernel.iostream
+    # Recent change to astropy has made our figure tests emit this warning.
+    ignore:'datfix' made the change:astropy.wcs.wcs.FITSFixedWarning
 
 [pycodestyle]
 max_line_length = 100
