--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 envlist =
-    py{37,38,39}{,-oldestdeps,-devdeps,-online,-figure,-hypothesis,-base_deps,-conda}
+    py{37,38,39}{,-oldestdeps,-devdeps,-online,-figure,-hypothesis,-conda}
     build_docs
     codestyle
+    base_deps
 requires =
     setuptools >= 30.3.0
     pip >= 19.3.1
@@ -128,7 +129,7 @@ commands =
     pre-commit run --color always --all-files --show-diff-on-failure
 
 [testenv:base_deps]
-description = Check the test suite does not fail if there are not extra dependencies
+description = Check the test suite does not fail if all optional dependencies are missing
 extras =
 deps =
   astropy>=4.0.3
