pin oldest deps

--- a/tox.ini
+++ b/tox.ini
@@ -53,19 +53,24 @@ deps =
     devdeps: git+https://github.com/astropy/astropy
     devdeps: git+https://github.com/matplotlib/matplotlib
 
-    # The 32bit and py39 build needs numpy installed before trying to install sunpy due
-    # to https://github.com/scikit-image/scikit-image/issues/4261
-    32bit,py39: numpy
-
     # Oldest deps we pin against.
     oldestdeps: astropy<4.2
     oldestdeps: numpy<1.17.0
-    oldestdeps: matplotlib<3.2
-    oldestdeps: scipy<1.4
-    oldestdeps: pandas<0.25
-    oldestdeps: h5netcdf<0.9
-    oldestdeps: parfive<1.3
+    oldestdeps: parfive<1.3.0
+    oldestdeps: asdf<2.4.0
+    oldestdeps: dask[array]<2.1.0
+    oldestdeps: sqlalchemy<1.4.0
+    oldestdeps: matplotlib<3.2.0
+    oldestdeps: pandas<0.25.0
+    oldestdeps: scipy<1.4.0
+    oldestdeps: scikit-image<0.16.0
+    oldestdeps: glymur<0.9.0
+    oldestdeps: beautifulsoup4<4.9.0
     oldestdeps: drms<0.7
+    oldestdeps: python-dateutil<2.9.0
+    oldestdeps: tqdm<4.33.0
+    oldestdeps: zeep<3.5.0
+    oldestdeps: h5netcdf<0.9
 
     # These are specific online extras we use to run the online tests.
     online: pytest-rerunfailures
@@ -73,7 +78,7 @@ deps =
     online: astroquery
     hypothesis: astroquery
 
-    # We have to pin this to use a wheel for manylinux2010 to compile
+    # We have to pin this to use a wheel for manylinux to compile
     32bit: cryptography<3.0
 
     # Figure tests need a tightly controlled environment
@@ -132,8 +137,8 @@ conda_deps =
     drms
     extension-helpers
     glymur
-    hypothesis
     h5netcdf
+    hypothesis
     jinja2
     libopenblas>=0.3.12
     lxml
@@ -142,6 +147,7 @@ conda_deps =
     openjpeg
     pandas
     parfive
+    pillow
     pytest
     pytest-astropy
     pytest-cov
@@ -153,7 +159,6 @@ conda_deps =
     sqlalchemy
     towncrier
     zeep
-    pillow
 conda_channels = conda-forge
 install_command = pip install --no-deps {opts} {packages}
 commands =
