updated hash for dev figure test

--- a/setup.cfg
+++ b/setup.cfg
@@ -78,6 +78,7 @@ tests =
   pytest-mock
   pytest-mpl>=0.12 # First version to support our figure tests
   tox
+  tox-pypi-filter
 docs =
   astroquery
   jplephem
