update dev docs and added tox-pypi-filter

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,10 @@ envlist =
     py{37,38,39}{,-oldestdeps,-devdeps,-online,-figure}
     build_docs
     codestyle
+requires =
+    setuptools >= 30.3.0
+    pip >= 19.3.1
+    tox-pypi-filter >= 0.12
 isolated_build = true
 
 [testenv]
