update changelog and test

--- a/setup.cfg
+++ b/setup.cfg
@@ -69,7 +69,7 @@ docs =
   sphinx-gallery
   sunpy-sphinx-theme
   ruamel.yaml
-  towncrier
+  towncrier >= 21.3.0
   reproject
   astroquery
   jplephem
