Move the imports after the Python version check in __init__.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -188,12 +188,13 @@ exclude =
     build,
     sunpy/data/sample.py,
     sunpy/extern/**,
+    sunpy/__init__.py,
 rst-directives =
     plot
 
 [isort]
 balanced_wrapping = True
-skip=sunpy/extern/,sunpy/cm/__init__.py,docs/conf.py
+skip=sunpy/extern/,sunpy/cm/__init__.py,docs/conf.py,sunpy/__init__.py
 default_section = THIRDPARTY
 include_trailing_comma = True
 known_astropy = astropy, asdf
